# DOOM-CPP

./: .gitignore  CMakeLists.txt  README.md  test.h
.github/workflows/: ccpp.yml
doom/: CMakeLists.txt  ChangeLog  FILES2  am_map.cpp  am_map.h  auto_map.cpp  auto_map.h  d_englsh.h  d_event.h  d_items.cpp  d_items.h  d_main.cpp  d_main.h  d_net.cpp  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.h  doomstat.cpp  doomstat.h  doomtype.h  dstrings.h  event.h  event_manager.h  f_finale.cpp  f_finale.h  f_wipe.cpp  f_wipe.h  fixed_point.cpp  fixed_point.h  g_game.cpp  g_game.h  hu_lib.cpp  hu_lib.h  hu_stuff.cpp  hu_stuff.h  i_net.cpp  (+84 more)
ipx/: CMakeLists.txt  doomnet.c  doomnet.h  ipxnet.c  ipxnet.h  ipxsetup.c
sersrc/: CMakeLists.txt  doomnet.c  doomnet.h  port.c  ser_frch.h  sersetup.c  sersetup.h  serstr.h
sndserv/: CMakeLists.txt  linux.cpp  sounds.cpp  sounds.h  soundsrv.cpp  soundsrv.h  soundst.h  wadread.cpp  wadread.h
